--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
 
       - name: "Bulding docker image"
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/projectos/image .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/projectos-image .
 
       - name: "Pusging to Docker hub"
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/projectos/image   
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/projectos-image   
 
 
 
